--- a/design/corbitmap.html
+++ b/design/corbitmap.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,40 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./mesclagembit.html" class="js-button">Anterior</a>
+        <a href="./ilustracao.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Alterações de cor
         </h1>
-
         <p>
+            Neste exercício aprenderemos um dos conceitos mais simples de edição de imagens que é o trabalho com cores,
+            nesse caso, selecionaremos parte de uma imagem e alteraremos sua cor. Você deverá abrir o arquivo Girl
+            Hijab.png na pasta de imagens do curso que utilizaremos para alterar a cor dos olhos. Veja como será o
+            resultado final:
         </p>
-
+        <img src="./corbitmap.jpg" alt="">
+        <p>
+            1. Inicie o GIMP e abra a imagem.
+        </p>
+        <p>
+            2. Utilize a seleção elíptica em modo de adição para selecionar as duas írises, em seguida a seleção livre
+            em modo de remoção para retirar as partes que extrapolaram o limite da íris.
+        </p>
+        <p>
+            Sua seleção deve ficar assim:
+        </p>
+        <img src="./corbitmap2.jpg" alt="">
+        <p>
+            3. Clique no menu Cores &rightarrow; Matiz/Saturação.
+        </p>
+        <p>
+            4. Aumente levemente o valor de Saturação, e diminua o valor de Matiz.
+        </p>
+        <p>
+            5. Está pronto! Exporte a imagem.
+        </p>
     </div>
 </div>
 
