--- a/design/gimp.html
+++ b/design/gimp.html
@@ -30,10 +30,11 @@
             GIMP
         </h1>
         <p>
-            O GIMP é um editor de imagens gratuito e de código aberto, ou seja, qualquer um pode alterar o código de
-            acordo com sua preferência, disponível para diversas plataformas incluindo Windows, Linux e Mac, que conta
-            com uma grande comunidade e uma enorme variedade de plugins. Você pode baixar o GIMP na página gimp.org.
+            O GIMP (GNU Image Manipulation Program) é um editor de imagens gratuito e de código aberto, disponível para
+            diversas plataformas incluindo Windows, Linux e Mac, que conta
+            com uma grande comunidade e uma enorme variedade de plugins. Você pode baixar o GIMP na página:
         </p>
+        <a href="https://gimp.org" target="_blank" class="js-button">gimp.org</a>
         <p>Área de Trabalho do GIMP: </p>
         <img src="./gimp.jpg" alt="">
         <p>
@@ -42,6 +43,19 @@
             de trabalho ao centro onde visualizaremos os arquivos que abrirmos, ao lado direito as Janelas de Encaixe e
             ao lado esquerdo as Barras de Ferramentas. Veremos a partir de agora as ferramentas essenciais e o que
             podemos fazer com elas.
+        </p>
+        <p>
+            É uma ferramenta ideal para:
+        </p>
+        <p>
+            Designers: Que desejam criar artes ou editar suas imagens.
+        </p>
+        <p>
+            Fotógrafos: Que desejam corrigir, tratar e manipular suas fotografias.
+        </p>
+        <p>
+            Ilustradores e artistas: Que desejam criar artes de alto nível como cartoons, charges, personagens e
+            ilustrações em geral.
         </p>
     </div>
 </div>
