--- a/design/ilustracao.html
+++ b/design/ilustracao.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,176 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./corbitmap.html" class="js-button">Anterior</a>
+        <a href="./animacao.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Pintura e Ilustração
         </h1>
 
         <p>
+            Vamos raciocinar um pouco, no desenho vetorial, podemos criar e editar vetores, a edição é feita com
+            ferramentas como o editor de nós, e a criação é feita com ferramentas como retângulo ou uma caneta bézier.
+            Você viu até agora como é feita a edição de bitmaps, mas e a criação?
+        </p>
+        <p>
+            A criação de um bitmap pode acontecer de forma automática, como em uma foto tirada por uma câmera ou numa
+            imagem renderizada num software com recursos de renderização (exemplo, softwares de animação e de 3D), em
+            ambos os casos os bitmaps são criados a partir de cálculos computacionais. A segunda forma é criar
+            manualmente (digamos), com o uso de ferramentas de Pintura Digital. Não estamos incluindo aqui imagens
+            criadas a partir de montagens de partes de imagens já existentes.
+        </p>
+        <p>
+            A Pintura Digital consiste em utilizar pinceis para colorir certa quantidade de pixels sobre uma base, ou
+            tela de fundo, onde todos os pixels estão transparentes (pode ainda ser uma tela de fundo branca ou de
+            qualquer outra cor uniforme).
+        </p>
+        <p>Traço de pincel ampliado: </p>
+        <img src="./ilustracao.jpg" alt="">
+        <p>
+            Todo software de edição de bitmap possui recursos de pincel especiais para pintura.
+        </p>
+        <p>
+            Paleta de pincéis do GIMP:
+        </p>
+        <img src="./ilustracao2.jpg" alt="">
+        <p>
+            Apesar da Pintura e da Ilustração não constituírem trabalho com edição e manipulação de imagens, faz parte
+            do trabalho com bitmaps e é uma das funções dos softwares de edição de bitmap. Tenha em mente que estamos
+            entrando em um mundo completamente diferente que é o mundo da ilustração e que possui muito a se aprender.
+            Uma ilustração geralmente inclui as seguintes etapas:
         </p>
 
+
+        <h3>
+            Croqui
+        </h3>
+        <p>
+            Esta é a primeira etapa do processo de desenho, e onde exige a maior capacidade de observação das
+            referências. É nesta etapa em que rascunhamos as formas do desenho que faremos numa camada base:
+        </p>
+        <img src="./ilustracao3.jpg" alt="">
+        <h3>
+            Cor
+        </h3>
+        <p>
+            Etapa em que adicionamos as cores de preenchimento ao desenho. Geralmente feita em mais de uma camada:
+        </p>
+        <img src="./ilustracao4.jpg" alt="">
+        <h3>
+            Line-art
+        </h3>
+        <p>
+            Etapa em que as linhas, quando necessárias, são aperfeiçoadas ganhando nitidez e ajustando suas espessuras
+            de
+            acordo com a necessidade:
+        </p>
+        <img src="./ilustracao5.jpg" alt="">
+        <h3>
+            Sombra e Luz
+        </h3>
+        <p>
+            Etapa de finalização em que o desenho começa a ganhar realismo reagindo a fontes de luz:
+        </p>
+        <img src="./ilustracao6.jpg" alt="">
+
+        <h3>
+            Fundamentos de Ilustração
+        </h3>
+        <p>
+            A etapa de line-art é utilizada em apenas alguns tipos de ilustração, em outros tipos, acrescentam-se mais
+            etapas, pois devemos ter em mente que existem diversos tipos de ilustração diferentes, por exemplo, uma
+            ilustração flat é completamente diferente de uma pintura digital conceitual.
+        </p>
+        <p>
+            Se quiser realmente se dedicar a este tipo de trabalho, recomendo buscar alguns cursos de ilustração e
+            pintura digital e adquirir uma mesa digitalizadora apropriada, já que o mouse não foi criado para desenhar.
+        </p>
+        <p>Mesa digitalizadora Huion básica: </p>
+        <img src="./ilustracao7.jpg" alt="">
+        <p>
+            Algumas dicas ajudam no momento do desenho:
+        </p>
+        <p>
+            1. Escolha o pincel certo para o que está fazendo.
+        </p>
+        <p>
+            2. Obedeça aos conceitos de Design Gráfico (veja no último capítulo deste livro).
+        </p>
+        <p>
+            3. Obedeça aos conceitos de Cor. (Capítulo VII)
+        </p>
+        <p>
+            4. Saiba utilizar os efeitos de design (Capítulo VI) como simetria, profundidade etc.
+        </p>
+        <p>
+            5. Treine bastante isoladamente o desenho de objetos, animais, paisagens e formas humanas.
+        </p>
+        <p>
+            6. Treine o desenho do rosto humano.
+        </p>
+        <p>
+            7. Não crie do zero, sempre desenhe observando.
+        </p>
+        <p>
+            8. Não trace por cima, essa prática impedirá sua evolução e pode até te trazer problemas.
+        </p>
+        <h3>
+            Ilustração vetorial vs Pintura Digital
+        </h3>
+        <p>
+            Algumas pessoas dão preferência à ilustração vetorial e creem que conseguem um melhor resultado pelo fato de
+            as formas poderem ser editadas individualmente. Talvez isto seja verdade para quem trabalha unicamente com o
+            mouse, mas torna tudo ainda mais trabalhoso, no entanto as duas maneiras de desenhar são válidas, veja um
+            exemplo de arte criada vetorialmente (no CorelDraw):
+        </p>
+        <img src="./ilustracao8.jpg" alt="">
+        <p>
+            A arte acima foi feita por mim mesmo e levou um total de 7hrs para fica pronta. É tudo vetor agrupado!
+        </p>
+        <p>
+            É claro que o tempo levado para adquirir certo nível de qualidade se torna maior do que quando apenas
+            pintamos com pincéis. Agora veja um exemplo de arte criada em bitmap (nesse caso, utilizando o Krita):
+        </p>
+        <img src="./ilustracao9.jpg" alt="">
+        <p>
+            A arte acima é um auto-retrato que fiz utilizando o Krita para a pintura de fundo e o Inkscape para o
+            desenho que fiz redesenhando uma fotografia minha, os óculos foram criados na hora do desenho usando uma
+            referência da internet.
+        </p>
+        <p>
+            Vários softwares podem ser utilizados para pintura e o GIMP é uma ótima ferramenta para isso, tudo é questão
+            de aprender a utilizar o conjunto de pincéis, a ferramenta Pincel se encontra na Barra de Ferramentas à
+            esquerda, e as opções de pincel na barra à direita. O Photoshop também é largamente utilizado para pintura,
+            mas se quiser entrar nesse mundo recomendo fortemente o Krita, que além de ser open-source, é uma das
+            melhores ferramentas já criadas, bem conhecida dos ilustradores.
+        </p>
+        <h3>
+            Tipos de Ilustração
+        </h3>
+        <p>
+            Podemos separar Ilustração de Pintura, pois, apesar de se basearem nas mesmas técnicas criativas, possuem
+            conceitos diferentes, mas no geral, os estilos de ilustração e de pintura podem ser:
+        </p>
+
+        <h3>Cartoon</h3>
+        <img src="./ilustracao10.jpg" alt="">
+
+        <h3>Arte conceitual</h3>
+        <img src="./ilustracao11.jpg" alt="">
+
+        <h3>Fotorrealismo</h3>
+        <img src="./ilustracao12.jpg" alt="">
+
+        <h3>Mangá</h3>
+        <img src="./ilustracao13.jpg" alt="">
+
+        <h3>Ilustração flat</h3>
+        <img src="./ilustracao14.jpg" alt="">
+
+        <p> Esses são os tipos mais básicos de ilustração e pintura, mas existem ainda outras variações, subdivisões e
+            ainda técnicas utilizadas, como por exemplo, pintura a óleo, giz de cera, etc.</p>
     </div>
 </div>
 
