--- a/design/mesclagembit.html
+++ b/design/mesclagembit.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,71 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./filtros.html" class="js-button">Anterior</a>
+        <a href="./corbitmap.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Mesclagem
         </h1>
-
         <p>
+            Neste exercício estudaremos o conceito de mesclagem de imagem que é semelhante ao já utilizado com gráficos
+            vetoriais. Utilizaremos este conceito para aprender como colorir uma imagem preto e branco.
         </p>
-
+        <p>
+            Para esta tarefa, inicie o GIMP e abra a imagem com nome Phone.png na pasta de imagens do curso. Este será o
+            resultado do nosso trabalho:
+        </p>
+        <img src="./mesclagembit.jpg" alt="">
+        <p>
+            1. Na parte Inferior Direita da tela você pode verificar o Gerenciador de Camadas, clique no ícone, Criar
+            uma nova camada, e clique em OK.
+        </p>
+        <p>
+            2. Com a nova camada selecionada, utilize a Seleção Livre para criar uma área de seleção ao redor do
+            telefone.
+        </p>
+        <p>
+            3. Em seguida pegue a ferramenta pincel.
+        </p>
+        <p>
+            4. Escolha uma cor vermelho-escuro na Barra de Ferramentas.
+        </p>
+        <p>
+            5. Pinte dentro da seleção, sobre o telefone.
+        </p>
+        <p>
+            6. Altere a cor para verde-escuro.
+        </p>
+        <p>
+            7. Clique no menu Seleção &rightarrow; Inverter.
+        </p>
+        <p>
+            8. Agora pinte o fundo.
+        </p>
+        <p>
+            9. A imagem que está na camada de baixo já deve ter desaparecido totalmente a esta altura.
+        </p>
+        <p>
+            10. Note que pintamos as cores de forma oposta como você viu na imagem anterior, isso foi de propósito.
+        </p>
+        <p>
+            11. No Gerenciador de Camadas, altere o valor de Opacidade para 60%, na camada selecionada (a que está a
+            pintura).
+        </p>
+        <p>
+            12. Em Modo, escolha Subtrair.
+        </p>
+        <p>
+            13. Ficou legal né? Você pode ainda experimentar outros modos de mesclagem.
+        </p>
+        <p>
+            14. Lembre-se sempre de salvar sua imagem.
+        </p>
+        <p class="notas">
+            Dica: A mesclagem não precisa de transparência, quando diminuímos a opacidade apenas diminuímos a força da
+            mesclagem!
+        </p>
     </div>
 </div>
 
