--- a/design/filtros.html
+++ b/design/filtros.html
@@ -23,16 +23,39 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./retoque.html" class="js-button">Anterior</a>
+        <a href="./mesclagembit.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Aplicando filtros e ajustes
         </h1>
 
         <p>
+            Neste exercício aprenderemos a aplicar ajustes e filtros predefinidos sem a necessidade de selecionar partes da imagem. Para isso utilizaremos a imagem salva na pasta de imagens do curso com o nome Rose.png.
         </p>
-
+        <p>
+            Veja abaixo como será o resultado final:
+        </p>
+        <img src="./filtros.jpg" alt="">
+        <p>
+            1. Clique em Filtros &rightarrow; Melhorar &rightarrow; Remoção de olhos vermelhos.
+        </p>
+        <p>
+            2. Aumente o valor do Limiar para o máximo e clique em OK.
+        </p>
+        <p>
+            3. Com isso removemos de maneira prática todo o vermelho da imagem dando uma aparência de antiguidade e um efeito especial na rosa.
+        </p>
+        <p>
+            4. Agora vamos melhorar a aparência da imagem. Clique em Filtros &rightarrow; Melhorar &rightarrow; Passa-Altos.
+        </p>
+        <p>
+            5. Altere o Desvio Padrão para 100 e o Contraste para o máximo.
+        </p>
+        <p>
+            6. Ficou bacana, não? Agora exporte a imagem para sua pasta.
+        </p>
     </div>
 </div>
 
