--- a/design/retoque.html
+++ b/design/retoque.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,53 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./selecao.html" class="js-button">Anterior</a>
+        <a href="./filtros.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Retoque e correção
         </h1>
 
         <p>
+            Vamos começar a aprender as técnicas básicas de tratamento de imagens com o GIMP, lembrando que essas mesmas
+            técnicas se aplicam igualmente ao Adobe Photoshop, ao Corel Photopaint ou qualquer outro software que você
+            decida utilizar, inclusive o modo de trabalho das ferramentas será o mesmo.
         </p>
+        <p>
+            Na pasta de imagens do curso você encontrará uma imagem com o nome Freckles.png, abra essa imagem no GIMP.
+            Utilizaremos a ferramenta de retoque para remover toda a sarda do rosto da imagem, veja abaixo o resultado:
+        </p>
+        <h3>Antes</h3>
+        <img src="retoque.jpg" alt="">
+        <h3>Depois</h3>
+        <img src="retoque2.jpg" alt="">
 
+        <p>
+            1. Com a imagem aberta, pegue a ferramenta Restauração, que se encontra no 11º conjunto. Ou pressione H.
+        </p>
+        <p>
+            2. Na Barra de Propriedades, altere o tamanho do pincel para 50. Para tal dê um duplo clique dentro do controle Tamanho, digite 50 e pressione Enter.
+        </p>
+        <p>
+            3. Aumente o Zoom da imagem utilizando a tecla controle e a scroll do mouse. Aproxime até que possa ver as manchas de perto.
+        </p>
+        <p>
+            4. Segure a tecla Control e clique numa área limpa da pele, este será o ponto de controle.
+        </p>
+        <p>
+            5. Agora basta clicar sobre as áreas com manchas, próximas ao ponto de controle, talvez seja necessário clicar mais de uma vez. 
+        </p>
+        <p>
+            6. Sempre que estiver se afastando do ponto de controle, crie um novo, segurando Control e clicando sobre uma área limpa.
+        </p>
+        <p class="notas">
+            Para arrastar a tela, segure a barra de espaço e mova o mouse.
+        </p>
+        <p>
+            7. Quando terminar o tratamento clique em Arquivo &rightarrow; Exportar como. Navegue até uma pasta de sua preferência, em seguida clique em Selecionar o tipo de arquivo, e escolha PNG, depois clique em Exportar. 
+        </p>
+    
     </div>
 </div>
 
