--- a/aprendizado.html
+++ b/aprendizado.html
@@ -27,22 +27,12 @@
   </div>
   <br>
   <!--#region CURSOS -->
-<!--
-    <div class="child js-post">
-      <img src="./files/web.webp" alt="">
-      <div>
-        <h3>Web Design</h3>
-        <p>Aprenda Web, HTML, CSS e Web Design Responsivo</p>
-        <a class="js-button" href="#">Conheça</a>
-      </div>
-    </div>
--->
   <br>
   <div class="child js-post">
     <img src="./files/design.webp" alt="">
     <div class="overlay">
       <h3>Design Gráfico</h3>
-      <p>Aprenda os conceitos fundamentais de design gráfico</p>
+      <p>Aprenda os conceitos fundamentais de design gráfico.</p>
       <a class="js-button" href="./design/intro.html">Conheça</a>
     </div>
   </div>
@@ -51,8 +41,8 @@
     <img src="./files/info.webp" alt="">
     <div class="overlay">
       <h3>Informática</h3>
-      <p>Aprenda informática básica e avançada e muito mais</p>
-      <a class="js-button" href="./intro.html">Conheça</a>
+      <p>Aprenda informática básica e avançada e muito mais.</p>
+      <a class="js-button" href="./informatica/intro.html">Conheça</a>
     </div>
   </div>
   <br>
