--- a/design/0.html
+++ b/design/0.html
@@ -151,6 +151,7 @@
     <a href="./animacao.html">Animação Digital</a>
 
     <p>Adobe Photoshop</p>
+    <a href="./photoshop.html">Montagem de fotos</a>
     <a href="./montagem.html">Montagem de fotos</a>
 
     <p>Princípios do Design Gráfico</p>
