--- a/design/balanco.html
+++ b/design/balanco.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,21 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./contraste.html" class="js-button">Anterior</a>
+        <a href="./enfase.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Balanço
         </h1>
 
         <p>
+            O balanço é um conceito mais subjetivo do que objetivo e descreve o peso que um objeto pode ter em cena,
+            isso fica a critério da sensibilidade do designer no momento da criação, perceber quais objetos estão
+            pesando mais em sua arte e saber distribuí-los. Essa distribuição pode ser simétrica ou assimétrica, de
+            forma que um elemento pesado pode combinar com outro, ou combinar com elementos mais leves ao seu entorno.
         </p>
-
+        <img src="./balanco.jpg" alt="">
     </div>
 </div>
 
