--- a/design/desafioink.html
+++ b/design/desafioink.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,45 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
-
-
+        <a href="./unidade.html" class="js-button">Anterior</a>
+        <a href="./desafiopub.html" class="js-button" style="float: right;">Próximo</a>
         <h1>
+            Desafios
         </h1>
-
         <p>
+            Estamos quase nos despedindo, e com toda sinceridade espero que tenha aproveitado ao máximo este curso e que
+            tenha gostado de tudo o que aprendeu aqui. Todo o conteúdo necessário para você dar seus primeiros passos no
+            mundo do Design Gráfico foram transmitidos, e junto a eles, conhecimentos teóricos fundamentais para você se
+            tornar um bom designer, além da base prática para dominar os softwares mais utilizados no setor. Por esse
+            motivo, este último capítulo não visa transmitir conhecimento, mas testar o que você já aprendeu.
         </p>
-
+        <p>
+            Te passarei agora três desafios, um para o Inkscape, para testar seus conhecimentos de criação vetorial,
+            outro para o Publisher, para testar seus conhecimentos em editoração, e o último para o GIMP, para testar
+            seus conhecimentos em edição de bitmaps.
+        </p>
+        <p>
+            Cada um dos próximos exercícios foi feito com o software indicado para o desafio e utilizando unicamente as
+            técnicas ensinadas neste curso.
+        </p>
+        <h1>
+            Desafio Inkscape
+        </h1>
+        <p>
+            Neste desafio do Inkscape você terá de criar um cartaz do filme Eles Vivem, de 1989, para tal, você deverá
+            baixar a fonte Kill the noise no site DaFonte, ou instalá-la a partir da pasta de arquivos do curso. Veja
+            abaixo o resultado final.
+        </p>
+        <img src="./desafioink.jpg" alt="">
+        <p>
+            Fonte do texto <i>They Live</i>: Kill the noise (Dafonte.com).
+        </p>
+        <p>
+            Fonte do texto <i>Obey</i>: Segoe UI, (estilo Bold).
+        </p>
+        <p class="notas">
+            Dica: Nesta arte há recursos de clipagem e mesclagem!
+        </p>
     </div>
 </div>
 
