--- a/design/consideracoes.html
+++ b/design/consideracoes.html
@@ -23,14 +23,31 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./desafiogimp.html" class="js-button">Anterior</a>
 
 
         <h1>
+            Considerações sobre Softwares
         </h1>
 
         <p>
+            A partir de agora darei opiniões pessoais minhas embasadas em meus mais de 14 anos de experiência no setor.
+        </p>
+        <p>
+            Tenho visto crescer rivalidades infantis entre usuários de plataformas comerciais de Design Gráfico ao mesmo tempo em que vejo um completo abandono por parte dos usuários das alternativas não comerciais, que por causa desse próprio abandono terminam recebendo uma fama indevida de serem de qualidade inferior, frente às alternativas comerciais. Isso não é verdade.
+        </p>
+        <p>
+            Devo ser sincero aqui e admitir que por anos me mantive focado em plataformas comerciais como Corel e Adobe e há apenas alguns anos comecei a me aprofundar em aplicativos open-source, quando me deu aquele estalo, “Nossa! Isso funciona, é bom e é de graça!”. Este “estalo” costuma acontecer em quase todas as pessoas que passam do comercial para o open-source.
+        </p>
+        <p>
+            Aqueles que dizem que softwares livres possuem uma qualidade inferior à de softwares comerciais ou nunca os utilizaram, ou mexeram por algumas horas e por causa do condicionamento causado por anos de uso de um software acreditam que não conseguem mudar e desistem logo. Mas os softwares livres estão à mesma altura dos comerciais, possuem todos os seus recursos e capacidades. Além disso, possuem comunidades grandes e engajadas e você mesmo pode ser colaborador no desenvolvimento. Exemplos de sucesso por exemplo como Krita, ou em outros setores como o próprio Android, o Linux e o Firefox demonstram o poder do código livre.
+        </p>
+        <p>
+            É uma tristeza ver como as empresas padronizam o uso de softwares comerciais para seus funcionários, a maioria das vezes naturalizando a pirataria, e dessa forma terminam padronizando todo um setor, quando existem ferramentas que poderiam ser utilizadas de graça e até modificadas de acordo com a necessidade do profissional ou da empresa com a ajuda de um bom desenvolvedor.
+        </p>
+        <p class="notas">
+            Aprofunde-se no Design Gráfico e…<br>
+            Viva o Código-Livre!
         </p>
 
     </div>
