--- a/design/contraste.html
+++ b/design/contraste.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,29 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./montagem.html" class="js-button">Anterior</a>
+        <a href="./balanco.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Princípios do Design Gráfico
         </h1>
-
         <p>
+            O Design Gráfico possui 12 princípios subjetivos que ajudam o Designer a desenvolver projetos mais belos e
+            organizados. Veremos agora cada um deles.
         </p>
-
+        <h1>
+            Contraste
+        </h1>
+        <p>
+            O contraste é um dos princípios fundamentais do design e se baseia na combinação das cores conforme
+            explicado no capítulo sobre a harmonia das cores. Contraste quer dizer que um elemento de determinada cor não
+            pode se confundir com outros elementos, seja ao redor, seja em relação ao fundo. Por exemplo, se o fundo for
+            escuro, um texto ou objeto sobre ele só terá contraste se tiver uma cor clara, o contraste de cores é dado
+            com cores complementares diferentemente de cores análogas que tendem a se confundir.
+        </p>
+        <img src="./contraste.jpg" alt="">
+        <p>Avance para ver mais.</p>
     </div>
 </div>
 
