--- a/design/desafiogimp.html
+++ b/design/desafiogimp.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,18 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
-
-
+        <a href="./desafiopub.html" class="js-button">Anterior</a>
+        <a href="./consideracoes.html" class="js-button" style="float: right;">Próximo</a>
         <h1>
+            Desafio GIMP
         </h1>
-
         <p>
+            Este desafio é simples, mas audacioso, fazer uma bailarina chinesa dançar em meio às estrelas! As duas
+            imagens constam na pasta de imagens com os nomes Woman e Cosmos. Nesta montagem você precisará fazer alguns
+            ajustes na imagem e também deverá fazer uma pintura básica para simular as nuvens, basta escolher o pincel
+            certo e configurar tamanho e opacidade conforme necessário.
         </p>
-
+        <img src="./desafiogimp.jpg" alt="">
     </div>
 </div>
 
