--- a/design/desafiopub.html
+++ b/design/desafiopub.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,16 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
-
-
+        <a href="./desafioink.html" class="js-button">Anterior</a>
+        <a href="./desafiogimp.html" class="js-button" style="float: right;">Próximo</a>
         <h1>
+            Desafio Publisher
         </h1>
-
         <p>
+            Neste desafio você criará um flyer simples para promoção de inauguração de uma padaria, utilize as fontes do
+            sistema, Eras Bold e Lucida Sans.
         </p>
-
+        <img src="./desafiopub.jpg" alt="">
     </div>
 </div>
 
