--- a/design/enfase.html
+++ b/design/enfase.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,19 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./balanco.html" class="js-button">Anterior</a>
+        <a href="./repeticao.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Ênfase
         </h1>
-
         <p>
+            A ênfase se refere ao destaque que um objeto possui, esse mesmo conceito se encontra na animação, e, apesar
+            de ser um conceito subjetivo, é bem mais fácil de ser compreendido, pois refere-se diretamente à atenção que
+            um objeto chama para si em relação aos demais.
         </p>
-
+        <img src="./enfase.jpg" alt="">
     </div>
 </div>
 
