--- a/design/espacovaz.html
+++ b/design/espacovaz.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,18 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
-
-
+        <a href="./padrao.html" class="js-button">Anterior</a>
+        <a href="./movimento.html" class="js-button" style="float: right;">Próximo</a>
         <h1>
+            Espaço vazio
         </h1>
-
         <p>
+            O Espaço Vazio é o espaço de fundo dentro de uma arte e é de extrema importância, pode ser espaço não
+            utilizado ou espaço negativo. A diferença entre espaço não utilizado e espaço negativo é que o espaço
+            negativo se combina à arte para criar uma segunda forma ou transmitir um conceito. Diz-se que uma arte deve
+            ter pelo menos 50% de espaço vazio.
         </p>
-
+        <img src="./espacovaz.jpg" alt="">
     </div>
 </div>
 
