--- a/design/hierarquia.html
+++ b/design/hierarquia.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,15 +22,19 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./proporcao.html" class="js-button">Anterior</a>
+        <a href="./ritmo.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Hierarquia
         </h1>
-
         <p>
+            A Hierarquia segue o mesmo princípio que a Proporção só que em vários níveis, ou seja, definimos o elemento
+            mais importante como o maior de todos e assim criamos elementos cada vez menores de acordo com a importância
+            que desempenham dentro do conjunto total. É um conceito aplicado principalmente a hierarquia de textos.
         </p>
+        <img src="./hierarquia.jpg" alt="">
 
     </div>
 </div>
