--- a/design/movimento.html
+++ b/design/movimento.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,16 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
-
-
+        <a href="./espacovaz.html" class="js-button">Anterior</a>
+        <a href="./variedade.html" class="js-button" style="float: right;">Próximo</a>
         <h1>
+            Movimento
         </h1>
-
         <p>
+            O princípio de Movimento se refere à maneira como o olho humano observa uma arte e como cada elemento deve
+            remeter à outro ou a levar o olho para um próximo elemento dando uma sensação de movimentação.
         </p>
-
+        <img src="./movimento.jpg" alt="">
     </div>
 </div>
 
