--- a/design/padrao.html
+++ b/design/padrao.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,16 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
-
-
+        <a href="./ritmo.html" class="js-button">Anterior</a>
+        <a href="./espacovaz.html" class="js-button" style="float: right;">Próximo</a>
         <h1>
+            Padrão
         </h1>
-
         <p>
+            Um Padrão é um conjunto de objetos distribuídos e pode seguir conceitos de ritmo e repetição, o princípio de
+            Padrão deve dar a sensação de organização em um conjunto de objetos.
         </p>
-
+        <img src="./padrao.jpg" alt="">
     </div>
 </div>
 
