--- a/design/proporcao.html
+++ b/design/proporcao.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,15 +22,19 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./repeticao.html" class="js-button">Anterior</a>
+        <a href="./hierarquia.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Proporção
         </h1>
-
         <p>
+            A Proporção é um dos conceitos mais simples, pois apenas define a regra de importância de um elemento, já
+            que elementos menores são menos visíveis e elementos maiores são mais visíveis, é de se supor que os
+            elementos maiores numa arte devem sempre ser os mais importantes.
         </p>
+        <img src="./proporcao.jpg" alt="">
 
     </div>
 </div>
