--- a/design/repeticao.html
+++ b/design/repeticao.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,21 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./enfase.html" class="js-button">Anterior</a>
+        <a href="./proporcao.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Repetição
         </h1>
 
         <p>
+            A repetição é utilizada para reforçar uma ideia ou conceito que você deseja transmitir em sua arte, e pode
+            ser utilizada em qualquer elemento como símbolos, cores, textos entre outros. A repetição pode ser usada
+            ainda para manter um equilíbrio na arte, inserindo várias cópias de um ou mais elementos obedecendo os
+            conceitos de ritmo e padrão.
         </p>
-
+        <img src="./repeticao.jpg" alt="">
     </div>
 </div>
 
