--- a/design/ritmo.html
+++ b/design/ritmo.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,16 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
-
-
+        <a href="./hierarquia.html" class="js-button">Anterior</a>
+        <a href="./padrao.html" class="js-button" style="float: right;">Próximo</a>
         <h1>
+            Ritmo
         </h1>
-
         <p>
+            O princípio de ritmo remete à música e diz da distribuição de elementos e sua repetição bem como a
+            organização e o espaço entre eles. O ritmo pode ser progressivo, aleatório ou alternado.
         </p>
-
+        <img src="./ritmo.jpg" alt="">
     </div>
 </div>
 
