--- a/design/unidade.html
+++ b/design/unidade.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,16 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
-
-
+        <a href="./variedade.html" class="js-button">Anterior</a>
+        <a href="./desafioink.html" class="js-button" style="float: right;">Próximo</a>
         <h1>
+            Unidade
         </h1>
-
         <p>
+            O princípio de Unidade diz da maneira como vários elementos conversam entre si dando a sensação de formarem
+            um único elemento.
         </p>
-
+        <img src="./unidade.jpg" alt="">
     </div>
 </div>
 
