--- a/design/variedade.html
+++ b/design/variedade.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,16 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
-
-
+        <a href="./movimento.html" class="js-button">Anterior</a>
+        <a href="./unidade.html" class="js-button" style="float: right;">Próximo</a>
         <h1>
+            Variedade
         </h1>
-
         <p>
+            O princípio da Variedade é oposto ao princípio de Unidade e diz da maneira como diferentes elementos se
+            combinam entre si para criar uma harmonia na totalidade da arte.
         </p>
-
+        <img src="./variedade.jpg" alt="">
     </div>
 </div>
 
