--- a/apostilas.html
+++ b/apostilas.html
@@ -92,6 +92,27 @@
     </div>
   </div>
   <br>
+  <div class="child js-post">
+    <img src="./files/javascriptCapa.webp" alt="">
+    <div>
+      <h3>Javascript</h3>
+      <hr>
+      <p>
+        <b>Programe em Javascript e torne sites interativos</b><br>
+        Número de páginas: 279<br>
+        Dimensões: 14.8 x 21cm<br>
+        Acabamento: Brochura com orelha.<br>
+        Edição: (1) (2022)<br>
+        Interior: Colorido.
+      </p>
+      <h2>
+        R$: 179,63
+        <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-javascript" style="float: right;"
+          target="_blank">Confira</a>
+      </h2>
+    </div>
+  </div>
+  <br>
 
   <div class="js-post">
     <h2>Prefere estudar on-line?</h2>
