--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </a>
   <a class="child" href="./aprendizado.html">
     <img src="./files/learn.svg" alt="">
-    <p>Aprendizado on-line e gratuito a sua disposição a qualquer momento.</p>
+    <p>Aprendizado on-line e gratuito à sua disposição a qualquer momento.</p>
   </a>
   <a class="child" href="./contato.html">
     <img src="./files/contacts.svg" alt="">
