--- a/aprendizado.html
+++ b/aprendizado.html
@@ -23,7 +23,20 @@
 <div class="js-page">
   <div class="js-post">
     <h1>Aprendizado on-line</h1>
-    <p>Confira aqui a lista atualizada do conteúdo on-line dos cursos.</p>
+    <p>Confira aqui o material de apoio atualizado de todos os cursos.</p>
+    <p>Os conteúdos a seguir são transcritos das apostilas dos cursos. Estes materiais não são os cursos em
+      si, para acompanhar você precisará efetuar um curso online ou presencial.
+    </p>
+    <div>
+      <p>Inscreva-se num curso presencial entrando em contato por um meio de sua preferência em:</p>
+      <a href="https://www.jorgesouza.com.br/contato.html" class="js-button"
+        target="_blank">Contato</a>
+    </div>
+    <div>
+      <p>Inscreva-se num curso online no site da Udemy:</p>
+      <a href="https://www.udemy.com/user/jorge-souza-oliveira-dos-santos" class="js-button"
+        target="_blank">Cursos on-line</a>
+    </div>
   </div>
   <br>
   <!--#region CURSOS -->
@@ -31,7 +44,7 @@
   <div class="child js-post">
     <img src="./files/design.webp" alt="">
     <div class="overlay">
-      <h3>Design Gráfico</h3>
+      <h3>Curso Completo de Design Gráfico</h3>
       <p>Aprenda os conceitos fundamentais de design gráfico.</p>
       <a class="js-button" href="./design/intro.html">Conheça</a>
     </div>
@@ -40,13 +53,13 @@
   <div class="child js-post">
     <img src="./files/info.webp" alt="">
     <div class="overlay">
-      <h3>Informática</h3>
+      <h3>Curso de Informática Básica e Avançada</h3>
       <p>Aprenda informática básica e avançada e muito mais.</p>
       <a class="js-button" href="./informatica/intro.html">Conheça</a>
     </div>
   </div>
   <br>
-  
+
 
   <div class="js-post">
     <h2>Prefere adquirir uma apostila?</h2>
