--- a/design/intro.html
+++ b/design/intro.html
@@ -27,29 +27,16 @@
     <div class="js-post">
         <h1>Curso Completo de Design Gráfico</h1>
         <p>
-            O conteúdo deste curso on-line é transcrito da apostila que você pode conferir abaixo:
+            <b>Info: </b>Este é um material didático de apoio ou para consultas, você pode efetuar o curso on-line no
+            menu Aprendizado,
+            ou solicitar o curso presencial com o instrutor entrando em contato pelo meio de sua preferência em:
         </p>
-    </div>
-    <div class="child js-post">
-        <img src="../files/designCapa.webp" alt="">
-        <div>
-            <h3>Design Gráfico</h3>
-            <hr>
-            <b>
-                <p>Aprenda os conceitos fundamentais de design gráfico.
-            </b><br>
-            Nº de páginas: 222.<br>
-            Dimensões: 14.8 x 21cm<br>
-            Acabamento: Brochura com orelha.<br>
-            Edição: (1) (2022).<br>
-            Interior: Colorido.<br>
-            </p>
-            <h2>
-                R$: 139,15
-                <a class="js-button" href="https://clubedeautores.com.br/livro/curso-completo-de-design-grafico"
-                    style="float: right;" target="_blank">Confira</a>
-            </h2>
-        </div>
+        <a href="https://www.jorgesouza.com.br/contato.html" class="js-button" target="_blank">Contato</a>
+        <p>
+            O conteúdo deste curso on-line é transcrito da apostila que você pode conferir no link abaixo abaixo:
+        </p>
+        <a class="js-button" target="_blank"
+            href="https://clubedeautores.com.br/livro/curso-completo-de-design-grafico">Ver apostila impressa</a>
     </div>
     <style>
         .child {
